--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,16 +19,7 @@
         </div>
 
         <!-- Nav header: -->
-        <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibit.html" alt="Exhibit">Exhibit</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
-            </nav>
-        </header>
+        <header class="my-2 mx-auto w-3/5"></header>
 
         <!-- Main: -->
         <main class="my-2 mx-auto w-3/4">
