--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="css/main.css" />
-        <title>Brotherland - Martina Zaninelli</title>
+        <include src="./partials/head.html" locals='{"pathPrefix": "./", "pageTitle": "Brotherland - Martina Zaninelli"}' />
     </head>
 
     <body class="absolute w-full bg-white pb-16 text-gray-700">
-        <div class="flex flex-col items-center justify-between"><div class="h-[75vh] w-[75vw] bg-orange-300"></div></div>
-        <module href="/partials/nav.html" locals='{"pathPrefix": "./html"}' />
+        <div class="flex flex-col items-center justify-between">
+            <div class="h-[75vh] w-[75vw] bg-orange-300"></div>
+        </div>
+        <include src="./partials/nav.html" locals='{"pathPrefix": "./html"}' />
     </body>
 </html>
