--- a/src/html/interviews/interview1.html
+++ b/src/html/interviews/interview1.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <script locals>
+        module.exports = {
+            lol: { name: "Scrum" },
+            htmls: "<p>LA LA LA</p>",
+            str: "sdtrjjddj",
+            text: {
+                main: [
+                    "I think our neighbors watched it all like a theaters.",
+                    `We had no solidarity from our neighbors who had lived with us for twelve years. They just watched through the window or from further away. 
+					They tried to see what was going on between the young people shouting slogans and the police standing there
+                    with dogs. They were just spectators, there was no solidarity until we flew home. We didn't get any
+                    solidarity from our neighbors from Hoyerswerda.`,
+                    `In 2019 I was again in Hoyerswerda, there I participated in a meeting with my former neighbors. They told me, ‘We didn't see that!’ But I do not think it was so.`,
+                ],
+                author: "David Macou",
+            },
+        };
+    </script>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou"}' />
     </head>
@@ -16,77 +34,25 @@
                 <div id="macou1" class="mb-32 flex flex-row">
                     <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
                         <!-- Quote -->
-                        <blockquote
-                            class="flex flex-col justify-evenly self-start align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
-                        >
-                            <svg
-                                aria-hidden="true"
-                                class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
-                                viewBox="0 0 24 27"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                    fill="currentColor"
-                                />
-                            </svg>
-                            <!-- TODO Errors out on some kind of dark mode switcher -->
-                            <p class="self-center px-4">Wie ein Theater beobachtet..</p>
-                            <div class="rotate-180">
-                                <svg
-                                    aria-hidden="true"
-                                    class="h-6 w-6 self-end text-gray-400 dark:text-gray-600"
-                                    viewBox="0 0 24 27"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                        fill="currentColor"
-                                    />
-                                </svg>
-                            </div>
-                        </blockquote>
+                        <include src="./partials/interv_quote.html" locals='{"quote": "Wie ein Theater beobachtet.."}'></include>
 
                         <!-- Text -->
-                        <div class="mt-6">
-                            <p>I think our neighbors watched it all like a theaters.</p>
-                            <br />
-                            <p>
-                                We had no solidarity from our neighbors who had lived with us for twelve years. They just watched through
-                                the window or from further away. They tried to see what was going on between the young people shouting
-                                slogans and the police standing there with dogs. They were just spectators, there was no solidarity until we
-                                flew home. We didn't get any solidarity from our neighbors from Hoyerswerda.
-                            </p>
-                            <br />
-                            <p>
-                                In 2019 I was again in Hoyerswerda, there I participated in a meeting with my former neighbors. They told
-                                me, ‘We didn't see that!’ But I do not think it was so.
-                            </p>
-                            <br />
-                            David Macou
-                        </div>
+                        <scope with="text">
+                            <include src="./partials/interv_text.html"></include>
+                        </scope>
 
-                        <!-- Begin Audio -->
-                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 items-center rounded-md bg-slate-800 align-middle">
-                            <div class="mx-1 my-auto h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
-                            <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
-                                Wie ein Theater beobachtet
-                            </div>
-                        </div>
-                        <!-- End Audio -->
+                        <br />
+
+                        <!-- Audio -->
+                        <include src="./partials/interv_audio.html" locals='{"filePath": "/public/audio/DM_ 01.mp3"}'></include>
                     </div>
-                    <!-- Begin Image -->
-                    <div class="relative flex basis-8/12 flex-col justify-end pl-8">
-                        <img class="interview-image h-full rounded-md object-cover" src="../../../public/images/s-l1600.jpg" />
-                        <span class="absolute -bottom-4 self-end text-xs">Postcard of Hoyerswerda, 70ies</span>
-                    </div>
-                    <!-- End Image -->
+                    <!-- Image -->
+                    <include
+                        src="./partials/interv_img.html"
+                        locals='{"filePath": "/public/images/s-l1600.jpg", "caption": "Postcard of Hoyerswerda, 70ies"}'
+                    ></include>
                 </div>
             </div>
         </main>
-
-        <footer></footer>
     </body>
 </html>
