--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -9,7 +9,7 @@
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto flex flex-col sm:w-full md:w-4/5">
             Virtual Exhibit 2
 
             <div class="flex h-[40rem]">
@@ -27,11 +27,13 @@
                         ></include>
                     </div>
                 </div>
-                <div class="flex min-h-min basis-1/2 flex-col pl-1">
-                    <div class="relative h-full rounded-sm">
+                <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
+                    <!-- Plattenbauten Hoch -->
+                    <div class="relative h-full overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
                     </div>
-                    <div class="relative h-full rounded-sm pt-2">
+                    <!-- Plattenbauten mittelhoch -->
+                    <div class="relative h-full overflow-hidden rounded-sm pt-2">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
@@ -39,12 +41,13 @@
 
             <div class="mt-12 flex h-[60rem]">
                 <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
-                    <div class="relative mx-4 h-3/4 rounded-sm">
+                    <!-- Hausecke; türkise Fenster -->
+                    <div class="relative mr-16 h-3/4 overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
                     </div>
 
                     <!-- Audio -->
-                    <div class="flex w-full justify-center mb-20">
+                    <div class="mb-20 flex w-full justify-center">
                         <include
                             src="./partials/interv_audio.html"
                             locals='{"audioFilePath": "../../../public/audio/01_ J_R_01.mp3", "title": ""}'
@@ -52,9 +55,81 @@
                     </div>
                 </div>
                 <div class="flex basis-1/2 flex-col justify-end pl-1">
-                    <div class="relative h-3/4 rounded-sm">
+                    <!-- Feuerzeug -->
+                    <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
                     </div>
+                </div>
+            </div>
+
+            <div class="flex h-[60rem] pt-14">
+                <div class="basis-2/3 pb-24">
+                    <!-- Nahaufnahme Interviewpartner -->
+                    <div class="relative mr-20 h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+                <div class="-ml-10 mt-auto basis-1/3">
+                    <!-- Text "Damals in der DDR hat man.."  -->
+                    <span>
+                        Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
+                        Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es kommt die Kohle“.
+                        Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir wollten lernen und
+                        arbeiten
+                    </span>
+                </div>
+            </div>
+
+            <div class="flex h-[50rem] pt-16">
+                <div class="flex w-full flex-col justify-between">
+                    <!-- Schwimmbad -->
+                    <div class="relative h-1/3 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+
+                    <!-- Audio -->
+                    <div class="-mb-16 flex w-full justify-center">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'
+                        ></include>
+                    </div>
+                </div>
+
+                <div class="z-10 -mx-32 w-full pt-28">
+                    <!-- Audio -->
+                    <div class="flex w-full justify-center">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
+                        ></include>
+                    </div>
+                </div>
+
+                <div class="w-full pt-36">
+                    <!-- Heizung -->
+                    <div class="relative h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="relative mt-36 flex h-[60rem] w-full">
+                <div class="flex w-3/5 flex-col justify-between">
+                    <!-- Baum -->
+                    <div class="relative mt-[12rem] h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+
+                <div class="flex w-2/5 flex-col items-start justify-start pl-4">
+                    <div>
+                        Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die sagen
+                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht gemocht“.
+                    </div>
+                    <div class="mt-4">„Warum?“</div>
+                    <div class="z-10 -ml-[33rem] text-center text-7xl font-medium text-red-600">WEIL DU SCHWARZ BIST</div>
+                    <div class="mt-4">Wir hatten Angst. Das war in Berlin 1982-1983.</div>
                 </div>
             </div>
             <br />
