--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -1,21 +1,164 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <include src="./partials/head.html"
-            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 1"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
     </head>
 
-    <body class="bg-white text-gray-700">
+    <body class="bg-white">
         <header>
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto">
-            Virtual Exhibit 4
-            <br />
-            <a href="./ve2.html" alt="Virtual Exhibit 2">Next: Virtual Exhibit 2</a>
+        <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
+            <div class="relative flex h-[88rem] pt-20">
+                <div class="flex h-full w-2/5 flex-col justify-start">
+                    <!-- Stahlturm -->
+                    <div class="relative z-10 h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_023.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+
+                    <!-- Audio -->
+                    <div class="z-20 mx-auto my-32 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
+                        >
+                        </include>
+                    </div>
+                </div>
+
+                <div class="absolute left-0 right-0 top-0 z-10 mx-auto flex h-full w-1/3 flex-col justify-start pt-32">
+                    <!-- Audio "die ganze Struktur zerbrach" -->
+                    <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
+                        >
+                        </include>
+                    </div>
+                </div>
+
+                <div class="h-full w-1/5"></div>
+
+                <div class="flex h-full w-2/5 flex-col items-end justify-end">
+                    <div class="mt-auto h-full"></div>
+
+                    <!-- Plattenbau-->
+                    <div class="relative -mb-64 h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_024.jpg" class="absolute object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="relative -z-10 -ml-32 -mt-20 flex h-[70rem]">
+                <div class="flex basis-[90%] flex-col justify-center pr-1">
+                    <!-- Scherben -->
+                    <div class="relative h-5/6 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_025.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+
+                <!-- Audio "Besuch bekommen" -->
+                <div class="absolute bottom-0 right-0 mb-4 mr-12 flex w-1/4 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                    <include
+                        src="./partials/interv_audio.html"
+                        locals='{"audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
+                    >
+                    </include>
+                </div>
+            </div>
+
+            <div class="flex-flex-col mt-24 w-full items-end justify-start">
+                <span class="ml-auto block w-1/3 text-left">Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung,</span>
+                <div class="mx-auto w-full pb-2 text-center font-sans text-7xl text-red-600">
+                    <span>WIR KOMMEN NICHT RAUS</span>
+                </div>
+                <span class="ml-auto block w-1/3 text-left"
+                    >Die Gefahr war schon da, in den Wohnheimen, wo so viele Vietnamesen und Ausländer gesammelt gewohnt haben. Aber ich
+                    hatte schon eine eigene Wohnung... da hatte ich Glück, in dem Fall. Die Nazis kommen nicht in die deutschen Blöcken. Nur
+                    zu den Wohnheimen, den Ausländerwohnheimen, da kommen die hin. Das habe ich von unsere Leute gehört... es war schon eine
+                    ängstliche Zeit.</span
+                >
+            </div>
+
+            <div class="-mt-24 flex h-[60rem] justify-start">
+                <div class="h-1/3 w-1/2">
+                    <!-- Nahaufnahme Interviewpartner -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_026.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="-mx-20 flex h-[60rem]">
+                <div class="flex basis-1/2 flex-col justify-between pr-12">
+                    <!-- Fresse 1 -->
+                    <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <!-- Text "Meine Arbeit nehmen die.."  -->
+                    <span class="ml-20 mt-24 w-3/5">
+                        Dass Deutschland einig wird, das hört man schon '89... vom Fernsehen und von der Straße, die Deutschen unterhalten
+                        sich manchmal. Ich hatte dafür keinen Kopf... Ich war jetzt arbeitslos, ich musste irgendwas versuchen um weiter
+                        Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich nicht. Wir hatten schon genug
+                        Probleme im Kopf mit unserer Situation...
+                    </span>
+                </div>
+
+                <div class="flex basis-1/2 flex-col justify-end py-28 pl-12">
+                    <!-- Fresse 2 -->
+                    <div class="relative h-3/5 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+
+                    <!-- Fresse 3 -->
+                    <div class="relative h-4/5 w-full overflow-hidden rounded-sm pt-20">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="-mx-20 mt-32 flex h-[96rem]">
+                <div class="flex w-3/4 flex-col items-center justify-center pr-8">
+                    <div class="mt-auto h-3/4"></div>
+
+                    <!-- Autobrand -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <div class="mb-auto h-1/3"></div>
+                </div>
+
+                <div class="-mr-8 flex w-fit flex-col justify-between">
+                    <!-- Bauzaun -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
+                        <div class="absolute m-auto h-full w-1/3 translate-x-2/3 translate-y-1/2">
+                            <!-- Audio "wir wollten das ja letzten endes" -->
+                            <div class="m-auto flex w-4/5 items-center justify-center rounded-sm bg-gray-900 px-2 py-8">
+                                <include
+                                    src="./partials/interv_audio.html"
+                                    locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                                >
+                                </include>
+                            </div>
+                        </div>
+                    </div>
+
+                    <span class="mx-auto w-3/4 pt-32 text-left">
+                        Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von drüben
+                        und haben uns erstmal geschult. Wir mussten praktisch die Ausbildung nochmal neu machen damit wir überhaupt weiter
+                        arbeiten durften. Das fand ich so echt prägend und auch... auch so verletztend. Wir hatten ja eine gute Ausbildung,
+                        aber das hat auf einmal nicht mehr gezählt und mit welchem Recht? Das hast du einfach nicht verstanden. Und dann hat
+                        es auch nicht lange gedauert, dass du auf einmal entlassen wurdest. Das war dann kurz nach der Wende, da wurden ganz
+                        viele entlassen. Freunden, die nebenan bei uns hier gewohnt haben, die sind zu uns gekommen und dann haben wir alle
+                        zusammen erstmal geheult so ungefähr. Du hattest auf einmal Angst, Angst um deine Existenz, was machst du jetzt, wie
+                        geht es weiter... das ware wir nicht gewöhnt sowas.
+                    </span>
+                </div>
+            </div>
         </main>
     </body>
-
 </html>
