--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -112,57 +112,70 @@
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_029.jpg" class="absolute h-full w-full object-cover" />
                     </div>
 
-                    <!-- Audio -->
+                    <!-- Audio "Das wollten wir doch nicht" -->
                     <div class="absolute bottom-0 z-20 -mb-12 ml-12 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
                         <include
                             src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
+                            locals='{"audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
                         >
                         </include>
                     </div>
                 </div>
             </div>
 
-            <div class="-mx-20 mt-32 flex h-[96rem]">
-                <div class="flex w-3/4 flex-col items-center justify-center pr-8">
-                    <div class="mt-auto h-3/4"></div>
-
-                    <!-- Autobrand -->
+            <div class="flex h-[76rem]">
+                <div class="flex w-1/2 flex-col items-center justify-between pr-8">
+                    <!-- Klatsch 1 -->
                     <div class="relative h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
                     </div>
 
-                    <div class="mb-auto h-1/3"></div>
-                </div>
-
-                <div class="-mr-8 flex w-fit flex-col justify-between">
-                    <!-- Bauzaun -->
-                    <div class="relative h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
-                        <div class="absolute m-auto h-full w-1/3 translate-x-2/3 translate-y-1/2">
-                            <!-- Audio "wir wollten das ja letzten endes" -->
-                            <div class="m-auto flex w-4/5 items-center justify-center rounded-sm bg-gray-900 px-2 py-8">
-                                <include
-                                    src="./partials/interv_audio.html"
-                                    locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
-                                >
-                                </include>
-                            </div>
+                    <!-- Tischtennisplatte -->
+                    <div class="relative mt-auto flex h-full w-full flex-col justify-end">
+                        <div class="relative h-full w-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_033.jpg" class="absolute object-cover" />
+                        </div>
+                        <!-- Audio "wir wollten das ja letzten endes" -->
+                        <div
+                            class="absolute bottom-1/3 right-0 -mr-12 flex w-1/4 items-center justify-center rounded-sm bg-gray-900 px-2 py-8"
+                        >
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                            >
+                            </include>
                         </div>
                     </div>
+                </div>
 
-                    <span class="mx-auto w-3/4 pt-32 text-left">
-                        Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von drüben
-                        und haben uns erstmal geschult. Wir mussten praktisch die Ausbildung nochmal neu machen damit wir überhaupt weiter
-                        arbeiten durften. Das fand ich so echt prägend und auch... auch so verletztend. Wir hatten ja eine gute Ausbildung,
-                        aber das hat auf einmal nicht mehr gezählt und mit welchem Recht? Das hast du einfach nicht verstanden. Und dann hat
-                        es auch nicht lange gedauert, dass du auf einmal entlassen wurdest. Das war dann kurz nach der Wende, da wurden ganz
-                        viele entlassen. Freunden, die nebenan bei uns hier gewohnt haben, die sind zu uns gekommen und dann haben wir alle
-                        zusammen erstmal geheult so ungefähr. Du hattest auf einmal Angst, Angst um deine Existenz, was machst du jetzt, wie
-                        geht es weiter... das ware wir nicht gewöhnt sowas.
-                    </span>
+                <div class="flex w-1/2 flex-col justify-end pl-8">
+                    <div class="my-auto h-1/5"></div>
+
+                    <!-- Klatsch 2 -->
+                    <div class="relative h-1/5 w-full overflow-hidden rounded-sm pb-8">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_031.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <!-- Klatsch 3 -->
+                    <div class="relative h-1/5 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_032.jpg" class="absolute object-cover" />
+                    </div>
+                    <div class="my-auto h-1/5"></div>
+
+                    <div class="my-auto flex h-1/5 flex-col justify-end">
+                        <!-- Audio "es gab keine Grenze" -->
+                        <div class="flex w-4/5 items-center justify-center rounded-sm bg-gray-900 px-2 py-8">
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
+                            >
+                            </include>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="mt-36 h-[34rem] w-full bg-zinc-500 rounded-lg"></div>
         </main>
     </body>
 </html>
